--- a/client/clientDashboard.html
+++ b/client/clientDashboard.html
@@ -376,10 +376,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="border-t mt-4 pt-4 flex gap-2">
-                                <button class="flex-1 bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 rounded-lg transition text-sm\">View Details</button>
-                                <button class="flex-1 bg-gray-200 hover:bg-gray-300 text-gray-800 font-semibold py-2 rounded-lg transition text-sm\">Reorder</button>
-                            </div>
+                            <!-- Action buttons removed per request -->
                         </div>
                     </div>
 
@@ -417,9 +414,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="border-t mt-4 pt-4 flex gap-2">
-                                <button class="flex-1 bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 rounded-lg transition text-sm\">View Details</button>
-                                <button class="flex-1 bg-gray-200 hover:bg-gray-300 text-gray-800 font-semibold py-2 rounded-lg transition text-sm\">Pay Now</button>
+                            <div class="border-t mt-4 pt-4">
+                                <button class="w-full bg-gray-200 hover:bg-gray-300 text-gray-800 font-semibold py-2 rounded-lg transition text-sm">Pay Now</button>
                             </div>
                         </div>
                     </div>
@@ -458,9 +454,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="border-t mt-4 pt-4 flex gap-2">
-                                <button class="flex-1 bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 rounded-lg transition text-sm\">Track Order</button>
-                                <button class="flex-1 bg-gray-200 hover:bg-gray-300 text-gray-800 font-semibold py-2 rounded-lg transition text-sm\">Contact Support</button>
+                            <div class="border-t mt-4 pt-4">
+                                <button class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 rounded-lg transition text-sm">Track Order</button>
                             </div>
                         </div>
                     </div>
@@ -531,34 +526,39 @@
                 <div class="flex justify-between items-center">
                     <h3 class="text-xl font-bold">Messages</h3>
                     <div class="flex gap-3">
-                        <input type="text" placeholder="Search conversations..."
-                            class="bg-slate-50 border border-slate-200 rounded-xl px-4 py-2 text-sm focus:ring-2 focus:ring-blue-100 outline-none">
-                        <button onclick="switchTab('messages')" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-xl font-semibold text-sm transition-colors">Open Chat</button>
+                        <input id="globalConversationSearch" type="text" placeholder="Search conversations..."
+                            class="bg-slate-50 border border-slate-200 rounded-xl px-4 py-2 text-sm focus:ring-2 focus:ring-blue-100 outline-none" onkeyup="searchConversations(this.value)">
                     </div>
                 </div>
 
-                <!-- Messages -->
+                <!-- Chat UI: Left = conversations, Right = messages -->
                 <div class="bg-white rounded-2xl border shadow-sm overflow-hidden">
-                    <table class="w-full text-left">
-                        <thead class="bg-slate-50 border-b">
-                            <tr>
-                                <th class="px-6 py-4 text-xs font-bold text-slate-500 uppercase">From</th>
-                                <th class="px-6 py-4 text-xs font-bold text-slate-500 uppercase">Message</th>
-                                <th class="px-6 py-4 text-xs font-bold text-slate-500 uppercase">Date</th>
-                                <th class="px-6 py-4 text-xs font-bold text-slate-500 uppercase">Action</th>
-                            </tr>
-                        </thead>
-                        <tbody class="divide-y">
-                            <tr class="hover:bg-slate-50">
-                                <td class="px-6 py-4 font-semibold">Bes Burger House</td>
-                                <td class="px-6 py-4 text-slate-600">Your order is being prepared...</td>
-                                <td class="px-6 py-4">2 mins ago</td>
-                                <td class="px-6 py-4">
-                                    <button class="text-blue-600 hover:underline text-sm">Reply</button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <div class="flex h-96">
+                        <!-- Conversations List -->
+                        <div class="w-1/3 border-r p-4 flex flex-col">
+                            <input id="conversationSearch" type="text" placeholder="Search..." class="bg-slate-50 border border-slate-200 rounded-xl px-3 py-2 text-sm focus:ring-2 focus:ring-blue-100 outline-none" onkeyup="searchConversations(this.value)">
+                            <ul id="convoList" class="mt-3 space-y-2 overflow-y-auto">
+                                <!-- conversations injected here -->
+                            </ul>
+                        </div>
+
+                        <!-- Chat Window -->
+                        <div class="flex-1 p-4 flex flex-col">
+                            <div id="chatHeader" class="border-b pb-3 mb-3">
+                                <h4 id="chatWith" class="font-semibold text-lg text-slate-800">Select a conversation</h4>
+                            </div>
+                            <div id="chatWindow" class="flex-1 overflow-y-auto p-3 rounded-lg bg-slate-50">
+                                <p class="text-sm text-slate-400">Choose a conversation from the left to view messages.</p>
+                            </div>
+
+                            <div class="mt-3">
+                                <div class="flex gap-2">
+                                    <input id="messageInput" type="text" placeholder="Type a message..." class="flex-1 bg-white border rounded-xl px-4 py-2" onkeydown="if(event.key==='Enter') sendMessage()">
+                                    <button onclick="sendMessage()" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-xl font-semibold">Send</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
             </section>
@@ -1153,6 +1153,90 @@
             const modal = document.getElementById('productModal');
             if (modal) modal.remove();
         }
+
+        // ===== Simple Conversations / Chat UI =====
+        const conversations = [
+            { id: 1, name: 'Bes Burger House', last: 'Your order is being prepared...', messages: [
+                { from: 'them', text: 'Your order is being prepared...', time: Date.now() - 60000 },
+                { from: 'me', text: 'Thanks! ETA?', time: Date.now() - 30000 }
+            ] },
+            { id: 2, name: 'Pizza Palace', last: 'Your pizza is out for delivery', messages: [
+                { from: 'them', text: 'Your pizza is out for delivery', time: Date.now() - 120000 }
+            ] },
+            { id: 3, name: 'Cafe Blend', last: 'We received your order', messages: [
+                { from: 'them', text: 'We received your order', time: Date.now() - 360000 }
+            ] }
+        ];
+
+        let activeConversationId = null;
+
+        function renderConversationsList(list = conversations) {
+            const ul = document.getElementById('convoList');
+            ul.innerHTML = '';
+            list.forEach(conv => {
+                const li = document.createElement('li');
+                li.className = 'p-3 rounded-lg hover:bg-slate-50 cursor-pointer flex justify-between items-start';
+                li.innerHTML = `
+                    <div>
+                        <div class="font-semibold">${conv.name}</div>
+                        <div class="text-xs text-slate-500 mt-1 truncate" style="max-width:220px">${conv.messages[conv.messages.length-1]?.text || ''}</div>
+                    </div>
+                    <div class="text-xs text-slate-400">${formatTime(conv.messages[conv.messages.length-1]?.time)}</div>
+                `;
+                li.onclick = () => selectConversation(conv.id);
+                ul.appendChild(li);
+            });
+        }
+
+        function selectConversation(id) {
+            activeConversationId = id;
+            const conv = conversations.find(c => c.id === id);
+            document.getElementById('chatWith').innerText = conv.name;
+            renderChatWindow(conv);
+        }
+
+        function renderChatWindow(conv) {
+            const win = document.getElementById('chatWindow');
+            win.innerHTML = '';
+            conv.messages.forEach(m => {
+                const p = document.createElement('div');
+                p.className = (m.from === 'me') ? 'text-right mb-2' : 'text-left mb-2';
+                p.innerHTML = `<div class="inline-block px-3 py-2 rounded-xl ${m.from === 'me' ? 'bg-blue-600 text-white' : 'bg-white text-slate-800 border'}">${m.text}</div>`;
+                win.appendChild(p);
+            });
+            win.scrollTop = win.scrollHeight;
+        }
+
+        function sendMessage() {
+            const input = document.getElementById('messageInput');
+            const text = input.value.trim();
+            if (!text || activeConversationId === null) return;
+            const conv = conversations.find(c => c.id === activeConversationId);
+            const msg = { from: 'me', text, time: Date.now() };
+            conv.messages.push(msg);
+            conv.last = text;
+            input.value = '';
+            renderChatWindow(conv);
+            renderConversationsList();
+        }
+
+        function searchConversations(query) {
+            const q = (query || '').toLowerCase();
+            if (!q) return renderConversationsList(conversations);
+            const filtered = conversations.filter(c => c.name.toLowerCase().includes(q) || (c.last || '').toLowerCase().includes(q));
+            renderConversationsList(filtered);
+        }
+
+        function formatTime(ts) {
+            if (!ts) return '';
+            const d = new Date(ts);
+            return d.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
+        }
+
+        // Initialize conversation list on load
+        document.addEventListener('DOMContentLoaded', () => {
+            renderConversationsList();
+        });
     </script>
 </body>
 </html>
